package world;
public enum UnderstandingLevel {
    All,
    Nothing
}