package actions;

import world.Character;

public interface Lookable {
    public void look(Character character);
}
